re PR fortran/14129 ([g77] gcc/f/lex.c buffer size limitation.)

PR fortran/14129
	* lex.c (ffelex_cfelex_): Avoid calling xrealloc on a local stack
	allocated array.

From-SVN: r77857